--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
+    <link href='https://unpkg.com/css.gg@2.0.0/icons/css/search.css' rel='stylesheet'>
     <title>Your Account</title>
 </head>
 
 <body>
+    <!-- ----------------------------------------         Navbar -->
     <div class="container">
         <header>
             <nav>
@@ -34,7 +36,196 @@
                     </div>
                 </div>
             </nav>
+
         </header>
+        <!-- ----------------------------------------         Main -->
+
+        <main>
+            <!-- ----SearchBar -->
+            <section class="seachbar">
+                <input type="text" class="searchBar__input">
+                <button class="search__button">
+                    <i class="gg-search"></i>
+                </button>
+            </section>
+
+
+            <!-- ----Account  -->
+
+            <div class="account__data">Account</div>
+
+
+            <!-- ----user Data  -->
+            <div class="userData">
+
+                <div class="interaction__data userData__container">
+                    <div class="userData__heading">Interaction</div>
+                    <div class="userData__data">0</div>
+
+                </div>
+
+                <div class="Volume__data userData__container">
+                    <div class="userData__heading">Volume</div>
+                    <div class="userData__data"><span class="userData_data_currency">$</span>0</div>
+
+
+                </div>
+
+                <div class="Contract__data userData__container">
+                    <div class="userData__heading">Contract</div>
+                    <div class="userData__data"><span class="userData_data_currency">$</span>0</div>
+
+                </div>
+                <div class="feeSpent__data userData__container">
+                    <div class="userData__heading">Fee Spent</div>
+                    <div class="userData__data"><span class="userData_data_currency">$</span>0</div>
+
+
+                </div>
+            </div>
+            <!-- ----user balance Activity  -->
+
+            <div class="user__balance__activity">
+
+                <div class="user__balance user__balance__activity__box">
+                    <div class="userBalance__heading user__balance__activity__heading">Balance</div>
+                    <hr class="user__balance__activity__underline">
+                    <div class="user__balance__currency_conatiner">
+
+                        <div class="user__balance__currency">
+                            <div>ETH</div>
+                            <span class="user__balance__currency__full">Ethereum </span>
+                        </div>
+                        <div class="user__balance__currency__balance">
+                            1
+                        </div>
+                    </div>
+                </div>
+
+
+
+                <div class="user__activity user__balance__activity__box">
+                    <div class="userActivity__heading user__balance__activity__heading">Activity</div>
+                    <hr class="user__balance__activity__underline">
+
+                    <div class="user__activity__months">
+                        <div class="user__activity__first__months">
+                            <div class="user__activity__first__months__row">
+
+                                <div class="user__activity__month">January</div>
+                                <div class="user__activity__month__active__days">19<span>days</span></div>
+
+                            </div>
+                            <hr class="user__balance__activity__underlines">
+                        </div>
+                        <div class="user__activity__first__months">
+                            <div class="user__activity__first__months__row">
+
+                                <div class="user__activity__month">February</div>
+                                <div class="user__activity__month__active__days">17<span>days</span></div>
+
+                            </div>
+                            <hr class="user__balance__activity__underlines">
+                        </div>
+                        <div class="user__activity__first__months">
+                            <div class="user__activity__first__months__row">
+
+                                <div class="user__activity__month">March</div>
+                                <div class="user__activity__month__active__days">14 <span>days</span></div>
+
+                            </div>
+                            <hr class="user__balance__activity__underlines">
+                        </div>
+                        <div class="user__activity__first__months">
+                            <div class="user__activity__first__months__row">
+
+                                <div class="user__activity__month">April</div>
+                                <div class="user__activity__month__active__days">15 <span>days</span></div>
+
+                            </div>
+                            <hr class="user__balance__activity__underlines">
+                        </div>
+                        <div class="user__activity__first__months">
+                            <div class="user__activity__first__months__row">
+
+                                <div class="user__activity__month">May</div>
+                                <div class="user__activity__month__active__days">13 <span>days</span></div>
+
+                            </div>
+                            <hr class="user__balance__activity__underlines">
+                        </div>
+                        <div class="user__activity__first__months">
+                            <div class="user__activity__first__months__row">
+
+                                <div class="user__activity__month">June</div>
+                                <div class="user__activity__month__active__days">18 <span>days</span></div>
+
+                            </div>
+                            <hr class="user__balance__activity__underlines">
+                        </div>
+                        <div class="user__activity__first__months">
+                            <div class="user__activity__first__months__row">
+
+                                <div class="user__activity__month">July</div>
+                                <div class="user__activity__month__active__days">19 <span>days</span></div>
+
+                            </div>
+                            <hr class="user__balance__activity__underlines">
+                        </div>
+                        <div class="user__activity__first__months">
+                            <div class="user__activity__first__months__row">
+
+                                <div class="user__activity__month">August</div>
+                                <div class="user__activity__month__active__days">14<span>days</span></div>
+
+                            </div>
+                            <hr class="user__balance__activity__underlines">
+                        </div>
+                        <div class="user__activity__first__months">
+                            <div class="user__activity__first__months__row">
+
+                                <div class="user__activity__month">September</div>
+                                <div class="user__activity__month__active__days">7 <span>days</span></div>
+
+                            </div>
+                            <hr class="user__balance__activity__underlines">
+                        </div>
+                        <div class="user__activity__first__months">
+                            <div class="user__activity__first__months__row">
+
+                                <div class="user__activity__month">October</div>
+                                <div class="user__activity__month__active__days">29 <span>days</span></div>
+
+                            </div>
+                            <hr class="user__balance__activity__underlines">
+                        </div>
+                        <div class="user__activity__first__months">
+                            <div class="user__activity__first__months__row">
+
+                                <div class="user__activity__month">November</div>
+                                <div class="user__activity__month__active__days">23 <span>days</span></div>
+
+                            </div>
+                            <hr class="user__balance__activity__underlines">
+                        </div>
+                        <div class="user__activity__first__months">
+                            <div class="user__activity__first__months__row">
+
+                                <div class="user__activity__month">December</div>
+                                <div class="user__activity__month__active__days">15 <span>days</span></div>
+
+                            </div>
+                            <hr class="user__balance__activity__underlines">
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+
+        </main>
+
+
     </div>
 
 </body>
