--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         <main>
             <!-- ----SearchBar -->
-            <section class="seachbar">
+            <section class="search_bar">
                 <input type="text" class="searchBar__input">
                 <button class="search__button">
                     <i class="gg-search"></i>
@@ -90,11 +90,21 @@
                 <div class="user__balance user__balance__activity__box">
                     <div class="userBalance__heading user__balance__activity__heading">Balance</div>
                     <hr class="user__balance__activity__underline">
-                    <div class="user__balance__currency_conatiner">
+                    <div class="user__balance__currency_container">
+
+                        <div class="user__balance__currency">
+                            <div>BTC</div>
+                            <span class="user__balance__currency__full">Bitcoin </span>
+                        </div>
+                        <div class="user__balance__currency__balance">
+                            4
+                        </div>
+                    </div>
+                    <div class="user__balance__currency_container">
 
                         <div class="user__balance__currency">
                             <div>ETH</div>
-                            <span class="user__balance__currency__full">Ethereum </span>
+                            <span class="user__balance__currency__full">Ethereum</span>
                         </div>
                         <div class="user__balance__currency__balance">
                             1
